# Task-Management-TUI

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
src/: keybinds.hpp  main.cpp  storage.hpp  task.hpp  tui.hpp
src/app/: application.cpp  application.hpp
src/core/: list.hpp  task.hpp
src/input/: keybinds.cpp  keybinds.hpp  keycodes.hpp
src/persistence/: persistence.cpp  persistence.hpp
src/ui/: tui.cpp  tui.hpp
